--- a/index.ipynb
+++ b/index.ipynb
@@ -319,12 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant['rating'] > restaurant['rating'] \n",
+    "    return restaurant['rating'] > alternative['rating'] \n",
     "    pass"
    ]
   },
