Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "        return restaurant['price'] < alternative['rating'] \n",
+    "        return lenrestaurant['price'] < alternative['price'] \n",
     "    pass"
    ]
   },
