--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "        return lenrestaurant['price'] < alternative['price'] \n",
+    "        return len(restaurant['price']) < len(alternative['price'])\n",
     "    pass"
    ]
   },
